--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Labs Pipeline by benetech</title>
     <link rel="stylesheet" href="stylesheets/jquery.dynatable.css">
 	<script src="javascripts/jquery.dynatable.js"></script>
-	<script src="javascripts/jquery-1.7.2.min.js"></script>
+	<script src="javascripts/vendor/jquery-1.7.2.min.js"></script>
     <meta name="viewport" content="width=device-width">
 	
 	<script>
