--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
 
 	<table id="my-final-table">
 	  <thead>
-		<th>Summary</th>
+		<th>Created</th>
 		<th>Description</th>
+		<th>Key</th>
+		<th>Status</th>
+		<th>Summary</th>
 	  </thead>
 	  <tbody>
 	  </tbody>
