--- a/index.html
+++ b/index.html
@@ -4,47 +4,32 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Labs Pipeline by benetech</title>
-	<script src="vendor/jquery-1.7.2.min.js"></script>
-	
-	<link rel="stylesheet" href="stylesheets/jquery.dynatable.css">
-    <meta name="viewport" content="width=device-width">
-	
-	<script>
-		var json2 = $.getJSON("json/LabsPipeline.json", function(json) {
-			console.log(json);
-		});
-	</script>
+	<script   src="https://code.jquery.com/jquery-3.0.0.min.js"   integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="   crossorigin="anonymous"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.2.0/list.min.js"></script>
  </head>
  
  <body>
+ 
+ 
+ <div id="hacker-list">
+    <ul class="list"></ul>
+</div>
 
-	<table id="my-final-table">
-	  <thead>
-		<th>Created</th>
-		<th>Description</th>
-		<th>Key</th>
-		<th>Status</th>
-		<th>Summary</th>
-	  </thead>
-	  <tbody>
-	  </tbody>
-	</table>
-<script src="jquery.dynatable.js"></script>
-  
-  
+
+
 <script>
-$(document).ready(function () {
-	
-	var $records = $('#json2'),
-		myRecords = JSON.parse($records.text());
-	$('#my-final-table').dynatable({
-	  dataset: {
-		records: myRecords
-	  }
-	});
-});
+var options = {
+  item: '<li><h3 class="name"></h3><p class="city"></p></li>'
+};
+
+var values = [
+  { name: 'Jonny', city:'Stockholm' }
+  , { name: 'Jonas', city:'Berlin' }
+];
+
+var hackerList = new List('hacker-list', options, values);
 </script>
-  
-  
-  </body>
+
+
+ </body>
 </html>
