--- a/index.html
+++ b/index.html
@@ -12,19 +12,27 @@
  	
 	<script>
 		var options = {
-		  item: '<li><h3 class="name"></h3><p class="city"></p></li>'
+			item: 'hacker-item'
 		};
 
 		var values = [
-		  { name: 'Jonny', city:'Stockholm' }
-		  , { name: 'Jonas', city:'Berlin' }
+			{ name: 'Jonny', city:'Stockholm' }
+			, { name: 'Jonas', city:'Berlin' }
 		];
 
 		var hackerList = new List('hacker-list', options, values);
 	</script>
  
 <div id="hacker-list">
-    <ul class="list"></ul>
+  <ul class="list"></ul>
+</div>
+
+<div style="display:none;">
+  <!-- A template element is needed when list is empty, TODO: needs a better solution -->
+  <li id="hacker-item">
+   <h3 class="name"></h3>
+   <p class="city"></p>
+  </li>
 </div>
 
 
