--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<title>Labs Pipeline by benetech</title>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<script src="\javascripts\papaparse.min.js"></script>
+		<script src="javascripts\papaparse.min.js"></script>
 	</head>
 	 
 	<body>
