--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				{
 					delimiter: ",",
 					header: true,
-					complete: function(results, file){console.log("Parsing complete:", results, file);},
+					complete: function(results, file){console.log("Parsing complete:", results, file);dataSet=results;},
 					error: function(error, file){console.log("Parsing error:", error, file);
 				});
 				
