--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					delimiter: ",",
 					header: true,
 					complete: function(results, file){console.log("Parsing complete:", results, file);dataSet=results;},
-					error: function(error, file){console.log("Parsing error:", error, file);
+					error: function(error, file){console.log("Parsing error:", error, file);}
 				});
 				
 				
