--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				
 				
 				$('#example').DataTable( {
-					data: dataSet,
+					data: dataSet.data,
 					columns: [
 						{ title: "Name" },
 						{ title: "Position" },
