--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>Labs Pipeline by benetech</title>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="javascripts/papaparse.min.js"></script>
+		<script src="javascripts/jquery.dataTables.min.js"></script>
 	</head>
 	 
 	<body>
