--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				
 				Papa.parse("https://benetech.github.io/LabsPipeline/data/pipe.csv", 
 				{
+					download: true,
 					delimiter: ",",
 					header: true,
 					complete: function(results, file){console.log("Parsing complete:", results, file);dataSet=results;},
