--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<table id="example" class="display" width="100%"></table>
 
 		<script>
-			var dataSet = [];
-			var ideas = [];
+			dataSet = [];
+			ideas = [];
 	
 			$(document).ready(function() {
 			
