--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<table id="example" class="display" width="100%"></table>
 
 		<script>
-			dataSet = [];
-			ideas = [];
+			dataSet = {};
+			ideas = {};
 	
 			$(document).ready(function() {
 			
