--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 		<table id="example" class="display" width="100%"></table>
 
 		<script>
-			dataSet = {};
-			ideas = {};
+			ideas = [];
 	
 			$(document).ready(function() {
 			
@@ -25,7 +24,7 @@
 					skipEmptyLines: true,
 					delimiter: ",",
 					header: true,
-					complete: function(results, file){console.log("Parsing complete:", results, file);ideas=dataSet.data;},
+					complete: function(results, file){console.log("Parsing complete:", results, file);ideas=results.data;},
 					error: function(error, file){console.log("Parsing error:", error, file);}
 				});
 				
