--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 		<script src="javascripts/jquery.dataTables.min.js"></script>
 		
 		<script>
-			data;
-			ideas = [];
+			var data;
+			var ideas = [];
+			var data_length;
 		
 			Papa.parse("https://benetech.github.io/LabsPipeline/data/pipe.csv", 
 				{
