--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<script>
 			var data;
 			var ideas = [];
+			var  results;
 			var data_length;
 		
 			Papa.parse("https://benetech.github.io/LabsPipeline/data/pipe.csv", 
