--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 	 
 	<body>
 		
+		<h1> Benetech Labs Idea Pipeline </h1>
+		
 		<table id="example" class="display" width="100%"></table>
 		
 		<script>
