--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		
 		<h1> Benetech Labs Idea Pipeline </h1>
 		
-		<table id="example" class="display" width="80%" data-order='[[2, "asc"]]' data-page-length='50'></table>
+		<table id="example" class="display" align="center" width="80%" data-order='[[2, "asc"]]' data-page-length='50'></table>
 		
 		<script>
 		
