--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		
 		<script>
 			var data =[];
+			var data2;
 			var ideas = [];
 			var allKeyPresent = false;
 			
@@ -42,8 +43,9 @@
 
 						}
 
-					}
-					complete: function(){transformData();}
+					},		
+					
+					complete: function(results){data2 = results.data; transformData();}
 				});
 				
 		</script>
